Bug-Fixing Menu-Button iPhone

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -21,6 +21,7 @@ html {
 
 #header {
   width: 100%; 
+  max-width: 100vw;
   background-color: white;
   height: 3.5rem; 
   display: flex; 
@@ -35,6 +36,9 @@ html {
 #header_logo {
   display: flex;
   height: 3rem; 
+  width: 50%; 
+  margin-right: 1rem;
+  max-width: 80%;
 }
 
 #logo_name {
@@ -65,6 +69,7 @@ html {
   display: flex; 
   flex-direction: row; 
   justify-content: space-between;
+
 }
 
 .header_nav__ul {
@@ -343,7 +348,7 @@ html {
 #section_gallery {
   background-color: white;
   min-height: 100vh;
-  margin-top: 3.5rem;
+  padding-top: 3.5rem;
 }
 
 #section_gallery:target {
